tests/positive/StdlibImport/StdlibImport.mjuvix
module StdlibImport;

open import Stdlib.Prelude;

import A;

two : ℕ;
two ≔ 1 + 1;

foo : A.Foo;
foo ≔ A.bar;

end;
