tests/negative/230/Prod.mjuvix
module Prod;

open import Prelude;
open import Foo;
     import Foo.Data.Bool;

fi : Foo.Data.Bool;
fi ≔ Foo.Data.Bool.false;

end;
